--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "projeto_integrador",
   "version": "1.0.0",
   "description": "",
-  "private":"true",
+  "private": "true",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,5 +20,8 @@
   "devDependencies": {
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
+  },
+  "dependencies": {
+    "firebase": "^9.17.2"
   }
 }
