--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
-    "firebase": "^9.17.2"
+    "firebase": "^9.17.2",
+    "firebaseui": "^6.0.2"
   }
 }
